--- a/docs/source/exporters/onnx/overview.mdx
+++ b/docs/source/exporters/onnx/overview.mdx
@@ -40,6 +40,7 @@ Supported architectures:
 - DistilBert
 - Donut-Swin
 - Electra
+- Encoder Decoder
 - Flaubert
 - GPT-2
 - GPT-BigCode
@@ -88,6 +89,7 @@ Supported architectures:
 - TROCR
 - UniSpeech
 - UniSpeech SAT
+- Vision Encoder Decoder
 - Vit
 - Wav2Vec2
 - Wav2Vec2 Conformer
