--- a/docs/source/onnxruntime/quickstart.mdx
+++ b/docs/source/onnxruntime/quickstart.mdx
@@ -23,7 +23,7 @@ Before applying quantization or optimization, we first need to export our model 
 >>> model_checkpoint = "distilbert-base-uncased-finetuned-sst-2-english"
 >>> save_directory = "tmp/onnx/"
 >>> # Load a model from transformers and export it to ONNX
->>> ort_model = ORTModelForSequenceClassification.from_pretrained(model_checkpoint, from_transformers=True)
+>>> ort_model = ORTModelForSequenceClassification.from_pretrained(model_checkpoint, export=True)
 >>> tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)
 >>> # Save the onnx model and tokenizer
 >>> ort_model.save_pretrained(save_directory)
