--- a/docs/source/quicktour.mdx
+++ b/docs/source/quicktour.mdx
@@ -20,7 +20,7 @@ This quick tour is intended for developers who are ready to dive into the code a
 
 To accelerate inference with ONNX Runtime, 🤗 Optimum uses _configuration objects_ to define parameters for graph optimization and quantization. These objects are then used to instantiate dedicated _optimizers_ and _quantizers_.
 
-Before applying quantization or optimization, first we need to load our model. To load a model and run inference with ONNX Runtime, you can just replace the canonical Transformers [`AutoModelForXxx`](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoModel) class with the corresponding [`ORTModelForXxx`](https://huggingface.co/docs/optimum/onnxruntime/package_reference/modeling_ort#optimum.onnxruntime.ORTModel) class. If you want to load from a PyTorch checkpoint, set `from_transformers=True` to export your model to the ONNX format.
+Before applying quantization or optimization, first we need to load our model. To load a model and run inference with ONNX Runtime, you can just replace the canonical Transformers [`AutoModelForXxx`](https://huggingface.co/docs/transformers/model_doc/auto#transformers.AutoModel) class with the corresponding [`ORTModelForXxx`](https://huggingface.co/docs/optimum/onnxruntime/package_reference/modeling_ort#optimum.onnxruntime.ORTModel) class. If you want to load from a PyTorch checkpoint, set `export=True` to export your model to the ONNX format.
 
 ```python
 >>> from optimum.onnxruntime import ORTModelForSequenceClassification
@@ -31,7 +31,7 @@ Before applying quantization or optimization, first we need to load our model. T
 
 >>> # Load a model from transformers and export it to ONNX
 >>> tokenizer = AutoTokenizer.from_pretrained(model_checkpoint)
->>> ort_model = ORTModelForSequenceClassification.from_pretrained(model_checkpoint, from_transformers=True)
+>>> ort_model = ORTModelForSequenceClassification.from_pretrained(model_checkpoint, export=True)
 
 >>> # Save the ONNX model and tokenizer
 >>> ort_model.save_pretrained(save_directory)
@@ -70,7 +70,7 @@ You can find more examples in the [documentation](https://huggingface.co/docs/op
 #### Intel
 
 To load a model and run inference with OpenVINO Runtime, you can just replace your `AutoModelForXxx` class with the corresponding `OVModelForXxx` class.
-If you want to load a PyTorch checkpoint, set `from_transformers=True` to convert your model to the OpenVINO IR (Intermediate Representation).
+If you want to load a PyTorch checkpoint, set `export=True` to convert your model to the OpenVINO IR (Intermediate Representation).
 
 ```diff
 - from transformers import AutoModelForSequenceClassification
@@ -81,7 +81,7 @@ If you want to load a PyTorch checkpoint, set `from_transformers=True` to conver
   tokenizer = AutoTokenizer.from_pretrained(model_id)
   model_id = "distilbert-base-uncased-finetuned-sst-2-english"
 - model = AutoModelForSequenceClassification.from_pretrained(model_id)
-+ model = OVModelForSequenceClassification.from_pretrained(model_id, from_transformers=True)
++ model = OVModelForSequenceClassification.from_pretrained(model_id, export=True)
 
   # Run inference!
   classifier = pipeline("text-classification", model=model, tokenizer=tokenizer)
