[`BT`] Improve docs (#944)
* improve docs

* Apply suggestions from code review

Co-authored-by: fxmarty <9808326+fxmarty@users.noreply.github.com>

---------

Co-authored-by: fxmarty <9808326+fxmarty@users.noreply.github.com>

--- a/docs/source/bettertransformer/tutorials/convert.mdx
+++ b/docs/source/bettertransformer/tutorials/convert.mdx
@@ -20,6 +20,7 @@ pip install transformers accelerate optimum
 ```
 
 Also, make sure to install the latest version of PyTorch by following the guidelines on the [PyTorch official website](https://pytorch.org/get-started/locally/). Note that `BetterTransformer` API is only compatible with `torch>=1.13`, so make sure to have this version installed on your environement before starting.
+If you want to benefit from the `scaled_dot_product_attention` function (for decoder-based models), make sure to use at least `torch>=2.0`.
 
 ## Step 1: Load your model
 
@@ -92,3 +93,24 @@ You can also use `transformers.pipeline` as usual and pass the convertede model 
 ```
 
 Please refer to the [official documentation of `pipeline`](https://huggingface.co/docs/transformers/main_classes/pipelines) for further usage. If you face into any issue, do not hesitate to open an isse on GitHub!
+
+## Training compatibility
+
+You can now benefit from the `BetterTransformer` API for your training scripts. Just make sure to convert back your model to its original version by calling `BetterTransformer.reverse` before saving your model.
+The code snippet below shows how:
+```python
+from optimum.bettertransformer import BetterTransformer
+from transformers import AutoModelForCausalLM
+
+with torch.device(“cuda”):
+    model = AutoModelForCausalLM.from_pretrained(“gpt2-large”, torch_dtype=torch.float16)
+
+model = BetterTransformer.transform(model)
+
+# do your inference or training here
+
+# if training and want to save the model
+model = BetterTransformer.reverse(model)
+model.save_pretrained("fine_tuned_model")
+model.push_to_hub("fine_tuned_model")
+```
