--- a/docs/source/exporters/onnx/usage_guides/contribute.mdx
+++ b/docs/source/exporters/onnx/usage_guides/contribute.mdx
@@ -158,7 +158,7 @@ For BERT, it looks as follows:
     "bert": supported_tasks_mapping(
         "default",
         "masked-lm",
-        "causal-lm",
+        "text-generation",
         "sequence-classification",
         "multiple-choice",
         "token-classification",
