--- a/docs/source/exporters/onnx/usage_guides/contribute.mdx
+++ b/docs/source/exporters/onnx/usage_guides/contribute.mdx
@@ -157,7 +157,7 @@ For BERT, it looks as follows:
 ```python
     "bert": supported_tasks_mapping(
         "default",
-        "masked-lm",
+        "fill-mask",
         "text-generation",
         "sequence-classification",
         "multiple-choice",
