--- a/docs/source/exporters/tflite/usage_guides/export_a_model.mdx
+++ b/docs/source/exporters/tflite/usage_guides/export_a_model.mdx
@@ -56,7 +56,7 @@ Required arguments:
 
 Optional arguments:
   --task TASK           The task to export the model for. If not specified, the task will be auto-inferred based on the model. Available tasks depend on
-                        the model, but are among: ['default', 'masked-lm', 'text-generation', 'text2text-generation', 'sequence-classification', 'token-classification',
+                        the model, but are among: ['default', 'fill-mask', 'text-generation', 'text2text-generation', 'sequence-classification', 'token-classification',
                         'multiple-choice', 'object-detection', 'question-answering', 'image-classification', 'image-segmentation', 'masked-im', 'semantic-
                         segmentation', 'automatic-speech-recognition', 'audio-classification', 'audio-frame-classification', 'audio-ctc', 'audio-xvector', 'vision2seq-
                         lm', 'stable-diffusion', 'zero-shot-object-detection']. For decoder models, use `xxx-with-past` to export the model using past key
