fix feature extraction

--- a/docs/source/exporters/task_manager.mdx
+++ b/docs/source/exporters/task_manager.mdx
@@ -45,7 +45,7 @@ It is possible to know which tasks are supported for a model for a given backend
 | Task                                 | Auto Class                           |
 |--------------------------------------|--------------------------------------|
 | `text-generation`, `text-generation-with-past`   | `AutoModelForCausalLM`               |
-| `default`, `default-with-past`       | `AutoModel`                          |
+| `feature-extraction`, `feature-extraction-with-past`       | `AutoModel`                          |
 | `fill-mask`                          | `AutoModelForMaskedLM`               |
 | `question-answering`                 | `AutoModelForQuestionAnswering`      |
 | `text2text-generation`, `text2text-generation-with-past` | `AutoModelForSeq2SeqLM`              |
