--- a/docs/source/exporters/onnx/usage_guides/contribute.mdx
+++ b/docs/source/exporters/onnx/usage_guides/contribute.mdx
@@ -129,7 +129,7 @@ classification head, we could use:
 >>> from transformers import AutoConfig
 
 >>> config = AutoConfig.from_pretrained("bert-base-uncased")
->>> onnx_config_for_seq_clf = BertOnnxConfig(config, task="sequence-classification")
+>>> onnx_config_for_seq_clf = BertOnnxConfig(config, task="text-classification")
 >>> print(onnx_config_for_seq_clf.outputs)
 OrderedDict([('logits', {0: 'batch_size'})])
 ```
@@ -159,7 +159,7 @@ For BERT, it looks as follows:
         "default",
         "fill-mask",
         "text-generation",
-        "sequence-classification",
+        "text-classification",
         "multiple-choice",
         "token-classification",
         "question-answering",
