--- a/docs/source/onnxruntime/usage_guides/trainer.mdx
+++ b/docs/source/onnxruntime/usage_guides/trainer.mdx
@@ -123,7 +123,7 @@ empowered by ONNX Runtime. Here is an example of how to use `ORTTrainer` compare
     model=model,
     args=training_args,
     train_dataset=train_dataset,
-+   feature="sequence-classification",
++   feature="text-classification",
     ...
 )
 
@@ -159,7 +159,7 @@ empowered by ONNX Runtime. Here is an example of how to use `ORTSeq2SeqTrainer` 
     model=model,
     args=training_args,
     train_dataset=train_dataset,
-+   feature="seq2seq-lm",
++   feature="text2text-generation",
     ...
 )
 
