--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -29,7 +29,7 @@ As such, 🤗 Optimum enables developers to efficiently use any of these platfor
       ><div class="w-full text-center bg-gradient-to-br from-blue-400 to-blue-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Optimum Intel</div>
       <p class="text-gray-700">Accelerate Transformers and Diffusers models inference using <a href="https://docs.openvino.ai/latest/index.html">OpenVINO</a> and Intel <a href="https://www.intel.com/content/www/us/en/developer/tools/oneapi/neural-compressor.html">Neural Compressor</a> to optimize your model.</p>
     </a>
-    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="./graphcore/index"
+    <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="."
       ><div class="w-full text-center bg-gradient-to-br from-orange-400 to-orange-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Optimum Neuron</div>
       <p class="text-gray-700">Train and run inference on Transformers models by leveraging the complete power of AWS Accelerators.</p>
     </a>
