--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -39,7 +39,7 @@ As such, 🤗 Optimum enables developers to efficiently use any of these platfor
     </a>
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="./exporters/overview"
       ><div class="w-full text-center bg-gradient-to-br from-green-400 to-green-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">Exporters</div>
-      <p class="text-gray-700">Export your model from PyTorch or TensorFlow to different formats such as ONNX and TFLite.</p>
+      <p class="text-gray-700">Export your PyTorch or TensorFlow model to different formats such as ONNX and TFLite.</p>
     </a>
     <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="./bettertransformer/overview"
       ><div class="w-full text-center bg-gradient-to-br from-yellow-400 to-yellow-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">BetterTransformer</div>
