--- a/docs/source/exporters/onnx/usage_guides/export_a_model.mdx
+++ b/docs/source/exporters/onnx/usage_guides/export_a_model.mdx
@@ -239,3 +239,81 @@ For each model architecture, you can find the list of supported tasks via the [`
 ```
 
 You can then pass one of these tasks to the `--task` argument in the `optimum-cli export onnx` command, as mentioned above.
+
+## Custom export of Transformers models
+
+Optimum allows for advanced users a finer-grained control over the configuration for the ONNX export. This is especially useful if you would like to export models with different keyword arguments, for example using `output_attentions=True` or `output_hidden_states=True`.
+
+To support these use cases, [~exporters.__main__.main_export] supports two arguments: `model_kwargs` and `custom_onnx_configs`, which are used in the following fashion:
+
+* `model_kwargs` allows to override some of the default arguments to the models `forward`, in practice as `model(**reference_model_inputs, **model_kwargs)`.
+* `custom_onnx_configs` should be a `Dict[str, OnnxConfig]`, mapping from the submodel name (usually `model`, `encoder_model`, `decoder_model`, or `decoder_model_with_past` - [reference](https://github.com/huggingface/optimum/blob/main/optimum/exporters/onnx/constants.py)) to a custom ONNX configuration for the given submodel.
+
+A complete example is given below, allowing to export models with `output_attentions=True`.
+
+```python
+from optimum.exporters.onnx.__main__ import main_export
+from optimum.exporters.onnx.model_configs import WhisperOnnxConfig
+from transformers import AutoConfig
+
+from optimum.exporters.onnx.base import ConfigBehavior
+from typing import Dict
+
+class CustomWhisperOnnxConfig(WhisperOnnxConfig):
+    @property
+    def outputs(self) -> Dict[str, Dict[int, str]]:
+        common_outputs = super().outputs
+
+        if self._behavior is ConfigBehavior.ENCODER:
+            for i in range(self._config.encoder_layers):
+                common_outputs[f"encoder_attentions.{i}"] = {0: "batch_size"}
+        elif self._behavior is ConfigBehavior.DECODER:
+            for i in range(self._config.decoder_layers):
+                common_outputs[f"decoder_attentions.{i}"] = {
+                    0: "batch_size",
+                    2: "decoder_sequence_length",
+                    3: "past_decoder_sequence_length + 1"
+                }
+            for i in range(self._config.decoder_layers):
+                common_outputs[f"cross_attentions.{i}"] = {
+                    0: "batch_size",
+                    2: "decoder_sequence_length",
+                    3: "encoder_sequence_length_out"
+                }
+
+        return common_outputs
+
+    @property
+    def torch_to_onnx_output_map(self):
+        if self._behavior is ConfigBehavior.ENCODER:
+            # The encoder export uses WhisperEncoder that returns the key "attentions"
+            return {"attentions": "encoder_attentions"}
+        else:
+            return {}
+
+model_id = "openai/whisper-tiny.en"
+config = AutoConfig.from_pretrained(model_id)
+
+custom_whisper_onnx_config = CustomWhisperOnnxConfig(
+        config=config,
+        task="automatic-speech-recognition",
+)
+
+encoder_config = custom_whisper_onnx_config.with_behavior("encoder")
+decoder_config = custom_whisper_onnx_config.with_behavior("decoder", use_past=False)
+decoder_with_past_config = custom_whisper_onnx_config.with_behavior("decoder", use_past=True)
+
+custom_onnx_configs={
+    "encoder_model": encoder_config,
+    "decoder_model": decoder_config,
+    "decoder_with_past_model": decoder_with_past_config,
+}
+
+main_export(
+    model_id,
+    output="custom_whisper_onnx",
+    no_post_process=True,
+    model_kwargs={"output_attentions": True},
+    custom_onnx_configs=custom_onnx_configs
+)
+```
