--- a/docs/source/onnxruntime/package_reference/modeling_ort.mdx
+++ b/docs/source/onnxruntime/package_reference/modeling_ort.mdx
@@ -113,3 +113,11 @@ The following ORT classes are available for the following custom tasks.
 #### ORTStableDiffusionPipeline
 
 [[autodoc]] onnxruntime.ORTStableDiffusionPipeline
+
+#### ORTStableDiffusionImg2ImgPipeline
+
+[[autodoc]] onnxruntime.ORTStableDiffusionImg2ImgPipeline
+
+#### ORTStableDiffusionInpaintPipeline
+
+[[autodoc]] onnxruntime.ORTStableDiffusionInpaintPipeline
