--- a/docs/source/onnxruntime/package_reference/modeling_ort.mdx
+++ b/docs/source/onnxruntime/package_reference/modeling_ort.mdx
@@ -121,3 +121,12 @@ The following ORT classes are available for the following custom tasks.
 #### ORTStableDiffusionInpaintPipeline
 
 [[autodoc]] onnxruntime.ORTStableDiffusionInpaintPipeline
+
+
+#### ORTStableDiffusionXLPipeline
+
+[[autodoc]] onnxruntime.ORTStableDiffusionXLPipeline
+
+#### ORTStableDiffusionXLImg2ImgPipeline
+
+[[autodoc]] onnxruntime.ORTStableDiffusionXLImg2ImgPipeline
